--- a/cat_vs_dog_detector_app/android/app/build.gradle
+++ b/cat_vs_dog_detector_app/android/app/build.gradle
@@ -24,8 +24,8 @@ android {
         applicationId = "com.example.cat_vs_dog_detector_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdkVersion 19
+        targetSdkVersion 30
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
@@ -37,6 +37,10 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+    aaptOptions {
+        noCompress 'tflite'
+        noCompress 'lite'
+    } 
 }
 
 flutter {
