--- a/cat_dog/pubspec.yaml
+++ b/cat_dog/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
     sdk: flutter
   
   image_picker: 1.1.2
-  tflite: ^1.1.2 
+  tflite: 1.1.2 
+  tflite_flutter: 0.8.0
+  image: 4.0.0
   
 
 
