--- a/cat_breed_recognizer/android/app/build.gradle
+++ b/cat_breed_recognizer/android/app/build.gradle
@@ -10,6 +10,11 @@ android {
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
+    aaptOptions {
+        noCompress 'tflite'
+        noCompress 'lite'
+    }
+
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
@@ -24,8 +29,8 @@ android {
         applicationId = "com.example.cat_breed_recognizer"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdkVersion 19
+        targetSdkVersion 29
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
