--- a/cat_breed_recognizer/pubspec.yaml
+++ b/cat_breed_recognizer/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: 1.0.8
   image_picker: 1.1.2
+  tflite: 1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -24,4 +25,6 @@ flutter:
   assets:
     - assets/flutter_logo.png
     - assets/ai.jpeg
+    - assets/labels.txt
+    - assets/model_unquant.tflite
 
