--- a/hack3-flask server - Image-to-text convertor app/pubspec.yaml
+++ b/hack3-flask server - Image-to-text convertor app/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  image_picker: ^1.1.2
+  http: ^1.2.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
