--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,4 @@ ios/firebase_app_id_file.json
 macos/Runner/GoogleService-Info.plist
 macos/firebase_app_id_file.json
 android/app/google-services.json
+hack3-flask server - Image-to-text convertor app/ai-learning-flutter-29e2d0764fdd.json
